@@ -1,28 +1,29 @@
 package com.infoshareacademy.service;
 
-import com.infoshareacademy.dto.GameDto;
 import com.infoshareacademy.dto.PlayerDto;
-import com.infoshareacademy.entity.Game;
 import com.infoshareacademy.entity.Player;
 import com.infoshareacademy.entity.Role;
 import com.infoshareacademy.mappers.PlayerMapper;
 import com.infoshareacademy.repository.PlayerRepository;
+import com.infoshareacademy.repository.RoleRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.crypto.factory.PasswordEncoderFactories;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 @Service
-@RequiredArgsConstructor(onConstructor = @__(@Autowired))
+@RequiredArgsConstructor()
 public class PlayerService implements UserDetailsService {
 
     private final PlayerRepository playerRepository;
+    private final RoleRepository roleRepository;
     private final PlayerMapper playerMapper;
 
 
@@ -34,11 +35,12 @@ public class PlayerService implements UserDetailsService {
     }
 
     public List<PlayerDto> getUsers() {
-        return playerRepository.findAll().stream().map(this::map).map(this::toDto).collect(Collectors.toList());
+        return playerRepository.findAll().stream().map(this::map).map(this::toDto).toList();
     }
 
     public PlayerDto findByUsername(String username) {
         Optional<Player> player = playerRepository.findByUsername(username);
+
         return playerMapper.toDto(player.get());
     }
 
@@ -57,5 +59,23 @@ public class PlayerService implements UserDetailsService {
         dto.setUsername(user.getUsername());
         dto.setRoles(user.getRoles());
         return dto;
+    }
+
+    //TODO make save return true or false if saved or not
+    public void savePlayer(PlayerDto playerDto) {
+        Player entityToSave = playerMapper.toEntity(playerDto);
+        Optional<Role> optionalRole = roleRepository.findByName("USER"); //TODO throw exc
+
+        optionalRole.ifPresent(role -> entityToSave.setRoles(Set.of(role)));
+
+        PasswordEncoder encoder = PasswordEncoderFactories.createDelegatingPasswordEncoder(); //TODO Autowire
+
+        entityToSave.setPassword(encoder.encode(entityToSave.getPassword()));
+
+        playerRepository.save(entityToSave);
+    }
+
+    public Optional<PlayerDto> findPlayerByUsername (String username) {
+        return playerRepository.findByUsername(username).map(playerMapper::toDto);
     }
 }
